--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,20 @@
 spring.application.name=payment-service
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/payment_service
 spring.datasource.username=postgres
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=create
+
+# JPA Configuration
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Stripe Payment Gateway (Test Keys)
+# IMPORTANT: Replace these with your actual keys (never commit real keys!)
+stripe.secret-key=sk_test_YOUR_STRIPE_SECRET_KEY_HERE
+stripe.publishable-key=pk_test_YOUR_STRIPE_PUBLISHABLE_KEY_HERE
+
+
+
