--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,12 @@
 			<artifactId>stripe-java</artifactId>
 			<version>26.8.0</version>
 		</dependency>
+		<!-- SpringDoc OpenAPI (Swagger) -->
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.14</version>
+		</dependency>
 	</dependencies>
 
 	<build>
